Demo_Binary_Collection is working

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -21,10 +21,9 @@
    "outputs": [],
    "source": [
     "from ndi import Session, Document\n",
-    "from ndi.database.sql import SQL as Database\n",
-    "from ndi.database.file_system import BinaryCollection\n",
-    "from ndi.query import Query as Q, AndQuery, OrQuery\n",
-    "from ndi.database.utils import print_everything_in, destroy_everything_in\n",
+    "from did import DID\n",
+    "from did.database import SQL\n",
+    "from did.query import Query as Q, AndQuery, OrQuery\n",
     "from sqlalchemy import and_, or_\n",
     "import struct"
    ]
@@ -44,9 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create SQL database object passing in a connection string\n",
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
-    "destroy_everything_in(db)"
+    "# Connecting to SQL database, passing in connection string\n",
+    "database_driver = SQL(\n",
+    "    'postgres://postgres:password@localhost:5432/ndi_demo_binary_collection', \n",
+    "    hard_reset_on_init = True,\n",
+    "    debug_mode = False,\n",
+    "    verbose_feedback = True,\n",
+    ")"
    ]
   },
   {
@@ -55,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating/connecting to a binary collection on disk providing a directory to store binary files and a name\n",
-    "bc = BinaryCollection('./test_db', name='demo')"
+    "# Creating/connecting to binary collection, passing in path and collection name\n",
+    "binary_collection_path = './example/binary_collections/Demo_Binary_Collection'"
    ]
   },
   {
@@ -65,25 +68,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating session object and connecting it to database and binary collection\n",
-    "e = Session('test_session').connect(\n",
-    "    directory='../tests/data/intracell_example',\n",
-    "    database=db,\n",
-    "    binary_collection=bc\n",
-    ")"
+    "data_interface_database = DID(database_driver, binary_collection_path, auto_save=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<did.database.sql.SQL object at 0x113ae4f70>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Creating an NDI Document\n",
-    "doc = Document({'content': 'numpy array'}, name='numpy_doc', type_='with_bin')\n",
-    "\n",
-    "# Adding NDI Document to session\n",
-    "e.add_document(doc)"
+    "# Creating a new Session object and connecting it to its context\n",
+    "session = Session('demo_api_core').connect(\n",
+    "    '../tests/data/intracell_example',\n",
+    "    data_interface_database,\n",
+    "    load_existing=False\n",
+    ")"
    ]
   },
   {
@@ -92,8 +99,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating an NDI Document\n",
+    "doc = Document(name='numpy_doc')\n",
+    "\n",
+    "# Adding NDI Document to session\n",
+    "session.add_document(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Opening a write stream object\n",
-    "ws = doc.binary.open_write_stream()\n",
+    "ws = doc.binary.open_write_stream('new_data')\n",
     "\n",
     "# Writing values into write stream object, write method only accepts bytes objects\n",
     "for i in range(5):\n",
@@ -107,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +143,7 @@
    ],
    "source": [
     "# Opening a read stream object\n",
-    "rs = doc.binary.open_read_stream()\n",
+    "rs = doc.binary.open_read_stream('new_data')\n",
     "\n",
     "# Reading bytes data from read stream and converting into numpy array\n",
     "print(np.frombuffer(rs.read(40)))\n",
@@ -141,29 +161,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "open_write_stream() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-7783f289d092>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Demo-ing write stream object using Pythonic \"with\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbinary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_write_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mws\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3.425\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4.34\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5345\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.453\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m542.\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m45\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mws\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstruct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'd'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: open_write_stream() missing 1 required positional argument: 'name'"
+     ]
+    }
+   ],
    "source": [
     "# Demo-ing write stream object using Pythonic \"with\"\n",
-    "with doc.binary.open_write_stream() as ws:\n",
+    "with doc.binary.open_write_stream('ctx_managed_data') as ws:\n",
     "    for i in [3.425,4.34,5345,.453,542.,45]:\n",
     "        ws.write(struct.pack('d', i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3.425e+00 4.340e+00 5.345e+03 4.530e-01 5.420e+02 4.500e+01]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Demo-ing read stream object using Pythonic \"with\"\n",
     "with doc.binary.open_read_stream() as rs:\n",
@@ -172,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,17 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'datadatadata'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Demo-ing read stream object using Pythonic \"with\"\n",
     "with doc.binary.open_read_stream() as rs:\n",
@@ -215,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
