Demo_App is almost working

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<did.database.sql.SQL object at 0x113ae4f70>\n"
+      "<did.database.sql.SQL object at 0x1179ef820>\n"
      ]
     }
    ],
@@ -163,69 +163,73 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "open_write_stream() missing 1 required positional argument: 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-7783f289d092>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Demo-ing write stream object using Pythonic \"with\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbinary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_write_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mws\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3.425\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4.34\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5345\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.453\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m542.\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m45\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mws\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstruct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'd'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: open_write_stream() missing 1 required positional argument: 'name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Demo-ing write stream object using Pythonic \"with\"\n",
-    "with doc.binary.open_write_stream('ctx_managed_data') as ws:\n",
+    "with doc.binary.open_write_stream('ctx_managed') as ws:\n",
     "    for i in [3.425,4.34,5345,.453,542.,45]:\n",
     "        ws.write(struct.pack('d', i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.425e+00 4.340e+00 5.345e+03 4.530e-01 5.420e+02 4.500e+01]\n"
+     ]
+    }
+   ],
    "source": [
     "# Demo-ing read stream object using Pythonic \"with\"\n",
-    "with doc.binary.open_read_stream() as rs:\n",
+    "with doc.binary.open_read_stream('ctx_managed') as rs:\n",
     "    print(np.frombuffer(rs.read(-1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating an NDI Document\n",
-    "doc = Document({'content': 'byte data'}, name='bytes_doc', type_='with_bin')\n",
+    "doc = Document(name='bytes_doc')\n",
     "\n",
     "# Adding NDI Document to session\n",
-    "e.add_document(doc)"
+    "session.add_document(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Demo-ing write stream object using Pythonic \"with\"\n",
-    "with doc.binary.open_write_stream() as ws:\n",
+    "with doc.binary.open_write_stream('hasbytes') as ws:\n",
     "    ws.write(b'datadatadata')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datadatadata\n"
+     ]
+    }
+   ],
    "source": [
     "# Demo-ing read stream object using Pythonic \"with\"\n",
-    "with doc.binary.open_read_stream() as rs:\n",
+    "with doc.binary.open_read_stream('hasbytes') as rs:\n",
     "    print(rs.read(-1).decode())"
    ]
   },
@@ -234,9 +238,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "destroy_everything_in(db)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
