Improve Demo_API_Core comments

--- a/example/Demo_Database_Query.ipynb
+++ b/example/Demo_Database_Query.ipynb
@@ -390,7 +390,8 @@
     "# Example of an unresolved query object\n",
     "try:\n",
     "    j = Q('j')\n",
-    "    j \n",
+    "    k = Q('k') == 'lol'\n",
+    "    j & k\n",
     "except QueryUnresolvedError:\n",
     "    print('QueryUnresolvedError')"
    ]
