remove test binaries

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "# The DID instance will also need a path to store binary data to.\n",
-    "binary_collection_path = './example/binary_collections/Demo_API_Core'"
+    "binary_collection_path = './binary_collections/Demo_API_Core'"
    ]
   },
   {
@@ -121,15 +121,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The Session can then be instantiated with a name,\n",
     "#   and connected to the raw data, DID instance, and DAQ system(s).\n",
@@ -147,22 +139,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x123f98af0>,\n",
-       "  <ndi.core.Epoch at 0x12383c250>,\n",
-       "  <ndi.core.Epoch at 0x124042340>],\n",
-       " [<ndi.core.Probe at 0x123ffec70>, <ndi.core.Probe at 0x124042820>],\n",
-       " [<ndi.core.Channel at 0x124042850>,\n",
-       "  <ndi.core.Channel at 0x12383c730>,\n",
-       "  <ndi.core.Channel at 0x123ffebe0>])"
+       "([<ndi.core.Epoch at 0x12e928e80>,\n",
+       "  <ndi.core.Epoch at 0x12e928af0>,\n",
+       "  <ndi.core.Epoch at 0x12e94c250>],\n",
+       " [<ndi.core.Probe at 0x12e928190>, <ndi.core.Probe at 0x12e928b50>],\n",
+       " [<ndi.core.Channel at 0x12e94c820>,\n",
+       "  <ndi.core.Channel at 0x12e0fc550>,\n",
+       "  <ndi.core.Channel at 0x12e0f4cd0>])"
       ]
      },
      "execution_count": 10,
@@ -197,18 +182,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x1274aa730>,\n",
-       " <ndi.core.Epoch at 0x1274aa130>,\n",
-       " <ndi.core.Epoch at 0x123ffef70>]"
+       "[<ndi.core.Epoch at 0x131db2fa0>,\n",
+       " <ndi.core.Epoch at 0x12e94cd90>,\n",
+       " <ndi.core.Epoch at 0x12e0fcaf0>]"
       ]
      },
      "execution_count": 12,
@@ -230,26 +208,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n",
       "{\n",
       "    \"base\": {\n",
-      "        \"id\": \"336f7a48bdba4401b58195dcf2c7e55f\",\n",
+      "        \"id\": \"0ab65433beec4e698f36ad5e9f2b1e26\",\n",
       "        \"name\": \"intra\",\n",
       "        \"records\": [\n",
-      "            \"28e8856f868df421473847e4467733f40f7e9b7e3aef5b3fc44b92f7e07c5df2\"\n",
+      "            \"f551cffa0eb36881b6d0720382f417923109d7dc8e57f553062530131f72ab2b\"\n",
       "        ],\n",
-      "        \"datestamp\": \"2020-12-08T17:04:28.756\",\n",
+      "        \"datestamp\": \"2020-12-08T22:46:50.438\",\n",
       "        \"snapshots\": [\n",
       "            1\n",
       "        ],\n",
-      "        \"session_id\": \"4d2907c4e9ac44508e5309208a44e3f0\"\n",
+      "        \"session_id\": \"3f31cddd08ce4241ae35622095574909\"\n",
       "    },\n",
       "    \"type\": \"sharp-Vm\",\n",
       "    \"reference\": 1,\n",
       "    \"depends_on\": [],\n",
       "    \"binary_files\": [],\n",
       "    \"dependencies\": [],\n",
-      "    \"daq_system_id\": \"02307b4b6b694feda9aff0700f60333b\",\n",
+      "    \"daq_system_id\": \"cf7f0646576245f7938e7b7ad5200b9e\",\n",
       "    \"document_class\": {\n",
       "        \"name\": \"ndi_probe\",\n",
       "        \"definition\": \"\",\n",
@@ -262,23 +239,23 @@
       "}\n",
       "{\n",
       "    \"base\": {\n",
-      "        \"id\": \"6458c6d2b84a4150a6701c3e02188481\",\n",
+      "        \"id\": \"0b413ac2641f4125a4dcb2f256a8d41d\",\n",
       "        \"name\": \"intra\",\n",
       "        \"records\": [\n",
-      "            \"95557dfad3728d1e1a9c9cf47e118defa2a82e51fdcb352b6d28bddb82d2240e\"\n",
+      "            \"b436952a1ddab3d9cb04e26f20474c5cc0c3123fce71e54ee1ffe7c4bdb8f008\"\n",
       "        ],\n",
-      "        \"datestamp\": \"2020-12-08T17:04:28.789\",\n",
+      "        \"datestamp\": \"2020-12-08T22:46:50.480\",\n",
       "        \"snapshots\": [\n",
       "            1\n",
       "        ],\n",
-      "        \"session_id\": \"4d2907c4e9ac44508e5309208a44e3f0\"\n",
+      "        \"session_id\": \"3f31cddd08ce4241ae35622095574909\"\n",
       "    },\n",
       "    \"type\": \"sharp-Vm\",\n",
       "    \"reference\": 2,\n",
       "    \"depends_on\": [],\n",
       "    \"binary_files\": [],\n",
       "    \"dependencies\": [],\n",
-      "    \"daq_system_id\": \"02307b4b6b694feda9aff0700f60333b\",\n",
+      "    \"daq_system_id\": \"cf7f0646576245f7938e7b7ad5200b9e\",\n",
       "    \"document_class\": {\n",
       "        \"name\": \"ndi_probe\",\n",
       "        \"definition\": \"\",\n",
@@ -308,16 +285,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x1274cc910>]"
+       "[<ndi.core.Probe at 0x1340a9cd0>]"
       ]
      },
      "execution_count": 14,
@@ -339,18 +309,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x1297a6940>,\n",
-       " <ndi.core.Channel at 0x1274cc490>,\n",
-       " <ndi.core.Channel at 0x1274ccb80>]"
+       "[<ndi.core.Channel at 0x1340a9670>,\n",
+       " <ndi.core.Channel at 0x131db2a90>,\n",
+       " <ndi.core.Channel at 0x131dcc3d0>]"
       ]
      },
      "execution_count": 15,
@@ -401,10 +364,10 @@
        "{'depends_on': [],\n",
        " 'dependencies': [],\n",
        " 'binary_files': [],\n",
-       " 'base': {'id': '87221b2126124b3da9e2b399010d5330',\n",
+       " 'base': {'id': 'fa39b38f7abb4b18b3c9ee8a6d613e46',\n",
        "  'session_id': '',\n",
        "  'name': '',\n",
-       "  'datestamp': '2020-12-08T17:04:28.950',\n",
+       "  'datestamp': '2020-12-08T22:46:50.627',\n",
        "  'snapshots': [],\n",
        "  'records': []},\n",
        " 'document_class': {'definition': '',\n",
@@ -503,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.context.Context object at 0x123ffe8e0>\n"
+      "<ndi.context.Context object at 0x12e9282b0>\n"
      ]
     }
    ],
@@ -591,9 +554,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': <ndi.document.Document at 0x10742d400>,\n",
-       " 'm&m': <ndi.document.Document at 0x1234f4b50>,\n",
-       " 'gambino': <ndi.document.Document at 0x123ffeb50>}"
+       "{'dre': <ndi.document.Document at 0x12e94cfa0>,\n",
+       " 'm&m': <ndi.document.Document at 0x1340a90a0>,\n",
+       " 'gambino': <ndi.document.Document at 0x12e0fc3d0>}"
       ]
      },
      "execution_count": 26,
@@ -614,7 +577,7 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': <ndi.document.Document at 0x1274aac40>}"
+       "{'dre': <ndi.document.Document at 0x12e0f4f40>}"
       ]
      },
      "execution_count": 27,
@@ -643,9 +606,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': <ndi.document.Document at 0x1297acf70>,\n",
-       " 'm&m': <ndi.document.Document at 0x1297ac790>,\n",
-       " 'gambino': <ndi.document.Document at 0x1297ace50>}"
+       "{'dre': <ndi.document.Document at 0x12e0d8eb0>,\n",
+       " 'm&m': <ndi.document.Document at 0x1340a9a60>,\n",
+       " 'gambino': <ndi.document.Document at 0x131dcf970>}"
       ]
      },
      "execution_count": 28,
@@ -683,8 +646,8 @@
     {
      "data": {
       "text/plain": [
-       "[(4, '9cf9b7064de53b78ef29e256b290a3f2f077aeff486859d600d1d427fa595575'),\n",
-       " (2, '9fa0aef472cc37f3f1d01d3d9d85bd4b2bec53d283dae4ff2dac82341d149da8')]"
+       "[(4, 'e952233c49fb5b9e8ed4808f82d6b9f69f1464d534bf8ba97ec704cdf219eaa0'),\n",
+       " (2, 'e2fea37d87ed0ce8cd67f68b313077f49767283ce0920cfc8d9bb1ab16e4bff9')]"
       ]
      },
      "execution_count": 29,
@@ -719,12 +682,12 @@
     {
      "data": {
       "text/plain": [
-       "{'id': '2ce6265064804069a3d64f516fff4ea1',\n",
+       "{'id': 'a86ee3aea1584755ab293083cad50536',\n",
        " 'name': 'og',\n",
-       " 'records': ['9fa0aef472cc37f3f1d01d3d9d85bd4b2bec53d283dae4ff2dac82341d149da8'],\n",
-       " 'datestamp': '2020-12-08T17:04:28.966',\n",
+       " 'records': ['e2fea37d87ed0ce8cd67f68b313077f49767283ce0920cfc8d9bb1ab16e4bff9'],\n",
+       " 'datestamp': '2020-12-08T22:46:50.640',\n",
        " 'snapshots': [2],\n",
-       " 'session_id': '4d2907c4e9ac44508e5309208a44e3f0'}"
+       " 'session_id': '3f31cddd08ce4241ae35622095574909'}"
       ]
      },
      "execution_count": 30,
@@ -747,9 +710,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': <ndi.document.Document at 0x1237e5280>,\n",
-       " 'm&m': <ndi.document.Document at 0x1274cc8e0>,\n",
-       " 'gambino': <ndi.document.Document at 0x1274d06d0>}"
+       "{'dre': <ndi.document.Document at 0x131dcc310>,\n",
+       " 'm&m': <ndi.document.Document at 0x131dcc520>,\n",
+       " 'gambino': <ndi.document.Document at 0x131db2e80>}"
       ]
      },
      "execution_count": 31,
@@ -785,13 +748,6 @@
    "execution_count": 33,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x10742d820>\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
