--- a/example/Demo_App.ipynb
+++ b/example/Demo_App.ipynb
@@ -57,7 +57,7 @@
     ")\n",
     "\n",
     "# Creating/connecting to binary collection, passing in path and collection name\n",
-    "binary_collection_path = './example/binary_collections/Demo_API_Core'\n",
+    "binary_collection_path = './binary_collections/Demo_APP'\n",
     "\n",
     "# Creating the Data Interface Database\n",
     "data_interface_database = DID(database_driver, binary_collection_path, auto_save=False)"
@@ -83,15 +83,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x11ca9ad00>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiating Session objects and connecting it to its context\n",
     "session = Session('demo_api_core').connect(\n",
@@ -108,22 +100,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x11ca9ad00>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x12923dfd0>,\n",
-       "  <ndi.core.Epoch at 0x12a5f09a0>,\n",
-       "  <ndi.core.Epoch at 0x12a5f0610>],\n",
-       " [<ndi.core.Probe at 0x129e242b0>, <ndi.core.Probe at 0x129e243d0>],\n",
-       " [<ndi.core.Channel at 0x12a5f04f0>,\n",
-       "  <ndi.core.Channel at 0x12a6343d0>,\n",
-       "  <ndi.core.Channel at 0x129e242e0>])"
+       "([<ndi.core.Epoch at 0x10bbfe970>,\n",
+       "  <ndi.core.Epoch at 0x128903ca0>,\n",
+       "  <ndi.core.Epoch at 0x128903b80>],\n",
+       " [<ndi.core.Probe at 0x127e22340>, <ndi.core.Probe at 0x128903af0>],\n",
+       " [<ndi.core.Channel at 0x1289035b0>,\n",
+       "  <ndi.core.Channel at 0x128946970>,\n",
+       "  <ndi.core.Channel at 0x1289463d0>])"
       ]
      },
      "execution_count": 8,
@@ -140,16 +125,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<did.database.sql.SQL object at 0x11ca9ad00>\n",
-      "<did.database.sql.SQL object at 0x11ca9ad00>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the first channel of the second probe in the session\n",
     "channel = session.get_probes()[1].get_channels()[0]"
