Wording changes to notebook

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# The Session can then be instantiated with a name,\n",
-    "#   and connected to the raw data, DID instance, and DAQ system(s).\n",
+    "# and connected to the raw data, DID instance, and DAQ system(s).\n",
     "session = Session('demo_api_core').connect(\n",
     "    raw_data_directory,\n",
     "    data_interface_database,\n",
@@ -274,7 +274,7 @@
     "ps = session.get_probes()\n",
     "\n",
     "# and view their DID documents representations.\n",
-    "#   (We're using the json library here for its pretty serialization function.)\n",
+    "# (We're using the json library here for its pretty serialization function.)\n",
     "for p in ps:\n",
     "    print(json.dumps(p.document.data, indent=4))"
    ]
@@ -344,13 +344,16 @@
     "# even though we've been able to modify its contents and view those changes.\n",
     "# Instead, they've been staged in a \"working snapshot\".\n",
     "\n",
-    "# To commit the snapshot and save your changes, use\n",
-    "session.save()\n",
-    "# and that's our first snapshot!\n",
+    "# To commit the snapshot and save your changes, use `session.save()` and that's our first snapshot!\n",
     "\n",
-    "# Note: Any operation that can modify the database will come with a `save` keyword argument, defaulting to None.\n",
+    "session.save()\n",
+    "\n",
+    "# Note:\n",
+    "#   Any operation that can modify the database will come with a `save` keyword argument, defaulting to None.\n",
     "#   Setting save = True is equivalent to calling session.save() immediately following the operation.\n",
-    "#   (eg.  `session.add_document(some_document, save=True)`  )"
+    "#   (eg.  `session.add_document(some_document, save=True)`  )\n",
+    "\n",
+    "#   If you don't want to keep the changes, you can use `session.revert()` to go back to the previous snapshot."
    ]
   },
   {
@@ -453,7 +456,7 @@
     "\n",
     "# Documents added in this way are not explicit dependencies of the session\n",
     "#   (but are still directly accessible to it via Session.get_documents()),\n",
-    "# but if desired, they can be set to be.\n",
+    "# but if desired, they can be set as such.\n",
     "session.document.link_dependency(deps[0])"
    ]
   },
@@ -475,7 +478,7 @@
     "# are attached to the Session's Context, which holds the DID instance,\n",
     "# associated DAQ systems, and other modular components of the session.\n",
     "# The Context can be accessed as .ctx on any NDI_Object or Document.\n",
-    "print(deps[2].ctx)"
+    "deps[2].ctx"
    ]
   },
   {
@@ -500,7 +503,7 @@
     "# Binary files can be writen to with a given name, which returns standard \n",
     "# [python io](https://docs.python.org/3/library/io.html) stream objects.\n",
     "with deps[2].binary.open_write_stream('leggo') as ws:\n",
-    "    ws.write(b'Took the G out your waffle, all you got left is your ego.')"
+    "    ws.write(b'Took the G out yo\\' waffle, all you got left is your ego.')"
    ]
   },
   {
@@ -669,7 +672,8 @@
     "}\n",
     "og_doc.update(save=True)\n",
     "\n",
-    "# Getting the first document's history yields a log of it's records and associated snapshots. \n",
+    "# Getting the first document's history yields a log of it's records and associated snapshots.\n",
+    "# Each log item is a tuple, structured as `(<snapshot_number>, <record_hash>)`.\n",
     "log = list(og_doc.get_history())\n",
     "log"
    ]
@@ -721,7 +725,7 @@
     }
    ],
    "source": [
-    "# The document's previous version retains its dependencies\n",
+    "# The document's previous version retains its dependencies.\n",
     "og_doc.dependencies"
    ]
   },
@@ -739,7 +743,7 @@
     }
    ],
    "source": [
-    "# Deleting a document, along with its history and dependencies\n",
+    "# Deleting a document, along with its dependencies.\n",
     "og_doc.delete(save=True)"
    ]
   },
